[package]
name = "leptos-bootstrap"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "Bootstrap styled components for leptos."
repository = "https://github.com/jamesgopsill/leptos-bootstrap"
readme = "README.md"
keywords = ["leptos", "bootstrap"]
authors = ["James Gopsill"]

[lib]

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
